erDiagram
    %% Note: Settings are stored in YAML file, not SQLite. This diagram shows SQLite tables only.
    category ||--o{ finance_transaction : classified_by
    category ||--o{ budget : has_limit

    initial_balance {
        integer id PK "singleton (id = 1)"
        integer initial_balance_minor "CHECK >= 0"
        text currency_code "default IDR"
        text initialized_at
    }

    category {
        integer id PK "AUTOINCREMENT"
        text name
        text normalized_key UK
        text description "nullable"
        text created_at
    }

    finance_transaction {
        text id PK "ULID (26-char, sortable)"
        text type "CHECK: income | expense"
        integer amount_minor "CHECK > 0"
        text currency_code "default IDR"
        integer category_id FK
        text category_name_snapshot
        text date
        text description "nullable"
        text created_at
    }

    budget {
        integer id PK "AUTOINCREMENT"
        integer category_id FK
        text month
        integer monthly_limit_minor "CHECK > 0"
        text updated_at
    }
